syntax = "proto3";

package flyteidl.admin;
option go_package = "github.com/flyteorg/flyteidl/gen/pb-go/flyteidl/admin";

// Response for the GetVersion API
message GetVersionResponse {
    // The control plane version information. FlyteAdmin and related components
    // form the control plane of Flyte
    Version control_plane_version = 1;
}

// Provides Version information for a component
message Version {
    // Specifies the GIT sha of the build
    string	Build = 1;

    // Version for the build, should follow a semver
    string Version = 2;

    // Build timestamp
    string BuildTime = 3;
}

// Empty request for GetVersion
message GetVersionRequest {
}
